Bug 58111 - [fbdev regression] surplus fbdev area on mutli-head systems not cleared.
Summary: [fbdev regression] surplus fbdev area on mutli-head systems not cleared.
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: low normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-11 04:31 UTC by shui yangwei
Modified: 2017-10-06 14:47 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg of HDMI screen mess (116.15 KB, text/plain)
2012-12-11 04:31 UTC, shui yangwei
no flags Details
HDMI screen mess photograph (1.22 MB, image/jpeg)
2012-12-11 04:34 UTC, shui yangwei
no flags Details

Description shui yangwei 2012-12-11 04:31:54 UTC
Created attachment 71304 [details]
dmesg of HDMI screen mess

Environment:(x-hnr8)
----------------------
Kernel: (drm-intel-next-queued)97a19a247c23e286814a5ac7ec0825d0ff82a16c
Some additional commit info:
Author: Tomas Janousek <tomi@nomi.cz>
Date:   Sat Dec 8 13:48:13 2012 +0100

    drm/i915: don't prevent CPU idle states

Description;
----------------------
Booting up with this kernel, HDMI screen messed.
You can check the photograph from the attachment.
If bisect is needed, please let me know.

Good commit:
----------------------
Kernel: (drm-intel-next-queued)421e206ac0944c756b5ab01a0d587d305274d413
Comment 1 shui yangwei 2012-12-11 04:34:04 UTC
Created attachment 71305 [details]
HDMI screen mess photograph
Comment 2 Daniel Vetter 2012-12-11 12:22:25 UTC
Looks like the missing clear for stolen memory allocated framebuffers. Reverting

commit 0ffb0ff283cca16f72caf29c44496d83b0c291fb
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Nov 15 11:32:27 2012 +0000

    drm/i915: Allocate fbcon from stolen memory

should work around the issue. Note that this happens everywhere you have more than 1 display connected when booting, and the native resolutions are different. The surplus area on the higher-res screen which is not used by the kernel fbdev console is not properly cleared and contains garbage (noise usually for fresh boots, old screen contents sometimes when rebooting).
Comment 3 Chris Wilson 2012-12-11 13:08:28 UTC
Another fix is to reuse the BIOS fb.
Comment 4 Chris Wilson 2012-12-17 11:35:39 UTC
commit 6ace91e648a327ebf98093b6d971a097c36cd46d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Dec 16 12:15:41 2012 +0000

    drm/i915: Clear the stolen fb before enabling
    
    As the stolen memory region will contain the contents of whatever was
    last there, it invariably contains garbage. To be consistent with the
    shmemfs backed fb and the expectations of the fb layer, we need to clear
    the fb prior to installing it as an fbcon.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=58111
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>
Comment 5 shui yangwei 2013-01-23 01:10:10 UTC
This issue gone.
Comment 6 Florian Mickler 2013-03-04 22:54:54 UTC
A patch referencing this bug report has been merged in Linux v3.9-rc1:

commit 88afe715dd5469bc24ca7a19ac62dd3c241cab48
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Dec 16 12:15:41 2012 +0000

    drm/i915: Clear the stolen fb before enabling
Comment 7 Elizabeth 2017-10-06 14:47:27 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.